--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
+# order matters a bit; install heavy wheels first
 numpy==1.26.4
 opencv-python-headless==4.10.0.84
 onnxruntime==1.18.1
-insightface==0.7.3
+
+# deps that insightface relies on (pin to stable manylinux wheels)
+scipy==1.11.4
+scikit-image==0.21.0
+pillow==10.4.0
+requests==2.31.0
+tqdm==4.66.4
+prettytable==3.10.0
+pydantic==1.10.15
+
+# use a version with reliable wheels on py3.10
+insightface==0.7.0
+
 runpod==1.6.2
